--- a/src/main/resources/templates/registro/fragmentos.html
+++ b/src/main/resources/templates/registro/fragmentos.html
@@ -79,5 +79,82 @@
                 </div>
             </div>
         </section>
+
+        <!-- 3. activa.html fragmento se utiliza para activas usuarios nuevos -->
+        <section th:fragment="activa">
+
+            <div class="row p-2 justify-content-center">
+                <div class="col-md-3">
+                    <form method="POST"
+                          th:action="@{/registro/habilitar}"
+                          th:object="${usuario}"
+                          enctype="multipart/form-data"
+                          class="was-validated">
+
+                        <input type="hidden"
+                               name="idUsuario"
+                               th:field="*(idUsuario)"/>
+
+                        <div class="card">
+                            <div class="card-header bg-primary text-center text-white">
+                                <h4>[[#{usuario.agregar}]]</h4>
+                            </div>
+                            <div class="card-body">
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.username}]]</label>
+                                    <input type="text" class="form-control"
+                                           name="username" th:field="*{username}"
+                                           maxlength="20" required="true"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.nombre}]]</label>
+                                    <input type="text" class="form-control"
+                                           name="nombre" th:field="*{nombre}"
+                                           maxlength="20" required="true"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.apellidos}]]</label>
+                                    <input type="text" class="form-control"
+                                           name="apellidos" th:field="*{apellidos}"
+                                           maxlength="30" required="true"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.correo}]]</label>
+                                    <input type="email" class="form-control"
+                                           name="correo" th:field="*{correo}"
+                                           maxlength="45" required="true"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.telefono}]]</label>
+                                    <input type="tel" class="form-control"
+                                           name="telefono" th:field="*{telefono}"
+                                           maxlength="15"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.password}]]</label>
+                                    <input type="password" class="form-control"
+                                           name="password" th:field="*{password}"
+                                           maxlength="15" required="true"/>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <label>[[#{usuario.imagen}]]</label>
+                                    <input class="form-control" type="file" name="imagenFile"
+                                           onchange="readURL(this);" />
+                                    <img id="blah" th:src="@{${usuario.rutaImagen}}" alt="your image" height="200"/>
+                                </div>
+
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-success">
+                                    <i class="fas fa-envelope"></i> [[#{usuario.activacion}]]
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            </div>
+        </section>
+
     </body>
 </html>
